--- a/app/templates/configure_path.html
+++ b/app/templates/configure_path.html
@@ -26,7 +26,7 @@
         {% endif %}
         {% if submit_button %}
         <input type="submit" name="submit_button" value="Submit changes">
-        <input type="submit" name="submit_button" value="Go to current path">
+        <input type="submit" name="submit_button" value="Go to default path">
         {% endif %}
     </form>
 </body>
