--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="static/style.css">
     <title>Document</title>
 </head>
 <body>
-    <p>
-        Hi there!
-    </p>
-    <p>
-        Confirm if you want to configure NAS upload path.
-    </p>
-    <a href="configure_path">Confirm</a>
+    <main>
+        <p>
+            Hi there!
+        </p>
+        <p>
+            Confirm if you want to configure NAS upload path.
+        </p>
+        <a href="configure_path">Confirm</a>
+    </main>
 </body>
 </html>
