--- a/app/templates/configure_path.html
+++ b/app/templates/configure_path.html
@@ -9,17 +9,16 @@
 </head>
 <body>
     <main>
-        <hl>ABOBA</hl>
-        <content class="smaller">
-            <form action="/configure_path" method="post">
-                <p>Share name: {{share_name}}</p>
-                <p>Path: {{dst_name}}</p>
+        <form action="/configure_path" method="post">
+            <p>Share name: <monospace>{{share_name}}</monospace></p>
+            <pl>Path: <monospace>{{dst_name}}</monospace></pl>
+            <content class="smaller">
+                {% if go_back %}
+                <input type="submit" name="go_back" value="Go back">
+                {% endif %}
+                {% if dirs %}
                 <content class="smaller">
-                    {% if go_back %}
-                    <input type="submit" name="go_back" value="Go back">
-                    {% endif %}
-                    {% if dirs %}
-                    <content class="smaller">
+                    <monospace>
                         <ul class="slash">
                             {% for dir in dirs %}
                                 <li>
@@ -28,15 +27,15 @@
                                 </li>
                             {% endfor %}
                         </ul>
-                    </content>
-                    {% endif %}
-                    {% if submit_button %}
-                    <input type="submit" name="submit_button" value="Submit changes">
-                    <input type="submit" name="submit_button" value="Go to default path">
-                    {% endif %}
+                    </monospace>
                 </content>
-            </form>
-        </content>
+                {% endif %}
+                {% if submit_button %}
+                <input type="submit" name="submit_button" value="Submit changes">
+                <input type="submit" name="submit_button" value="Go to default path">
+                {% endif %}
+            </content>
+        </form>
     </main>
 </body>
 </html>
