added uploading (min sync working booba)

--- a/app/templates/configure_path.html
+++ b/app/templates/configure_path.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <main>
+        <h><a href="/">To the main page</a></h>
         <form action="/configure_path" method="post">
             <p>Share name: <monospace>{{share_name}}</monospace></p>
             <pl>Path: <monospace>{{dst_name}}</monospace></pl>
