--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,13 +9,8 @@
 </head>
 <body>
     <main>
-        <p>
-            Hi there!
-        </p>
-        <p>
-            Confirm if you want to configure NAS upload path.
-        </p>
-        <a href="configure_path">Confirm</a>
+        <p><a href="configure_path">Configure NAS upload path</a></p>
+        <p><a href="upload_files">Upload files</a></p>
     </main>
 </body>
 </html>
