.html titles updated

--- a/app/templates/configure_path.html
+++ b/app/templates/configure_path.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="static/style.css">
-    <title>Document</title>
+    <title>Configure upload path</title>
 </head>
 <body>
     <main>
