reconnect to nas button added

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,6 +11,7 @@
     <main>
         <p><a href="configure_path">Configure NAS upload path</a></p>
         <p><a href="upload_files">Upload files</a></p>
+        <p><a href="reconnect_to_nas">Reconnect to NAS</a></p>
     </main>
 </body>
 </html>
